<resources>
    <string name="app_name">MySecondProject</string>
    <string name="Minus">-</string>
    <string name="hello_neiborr">Hello neiborr</string>
    <string name="plus">+</string>
    <string name="SimpleResult">TextView</string>
    <string name="edityes">Edit</string>
    <string name="qq">AC</string>
    <string name="edge_left">(</string>
    <string name="edge_roght">)</string>
    <string name="spliter">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplate">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string-array name="currencies">
        <item>₽</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <string-array name="periods">
        <item>Сегодня</item>
        <item>Неделя</item>
        <item>Месяц</item>
        <item>Год</item>
    </string-array>

</resources>
